--- a/config/prod/virtualhosts/films-javier-despliegue.api.chickenkiller.com.conf
+++ b/config/prod/virtualhosts/films-javier-despliegue.api.chickenkiller.com.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-    ServerName films-alberto-despliegue.api.chickenkiller.com
+    ServerName films-javier-despliegue.api.chickenkiller.com
 
     DocumentRoot /var/www/html/app
 
