--- a/config/prod/virtualhosts/films-javier-despliegue.api.chickenkiller.com.conf
+++ b/config/prod/virtualhosts/films-javier-despliegue.api.chickenkiller.com.conf
@@ -1,23 +1,14 @@
 <VirtualHost *:80>
-    ServerName films-javier-despliegue.api.chickenkiller.com
+    ServerAdmin josejavierhernandez.alu@iespacomolla.es
+    ServerName films-javier-despliegue.chickenkiller.com
+    ServerAlias films-javier-despliegue.chickenkiller.com www.films-javier-despliegue.chickenkiller.com films-javier-despliegue.mooo.com
+    DocumentRoot /var/www/html/app/public_html
+   
+    DirectoryIndex pages/home.html
 
-    DocumentRoot /var/www/html/app
-
-    # Configuración del servidor
-    <Directory /var/www/html/app>
+    <Directory /var/www/html/app/public_html>
         Options Indexes FollowSymLinks MultiViews
         AllowOverride All
         Require all granted
     </Directory>
-
-    RewriteEngine On
-    RewriteCond %{REQUEST_METHOD} OPTIONS
-    RewriteRule ^(.*)$ $1 [R=200,L]
-    
-    Header always add Access-Control-Allow-Origin "*"
-    Header always add Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
-    Header always add Access-Control-Allow-Headers "origin, x-requested-with, content-type, accept, authorization"
-
-    ErrorLog ${APACHE_LOG_DIR}/dev_error.log
-    CustomLog ${APACHE_LOG_DIR}/dev_access.log combined
-</VirtualHost> 
+</VirtualHost>
