cambios virtualhost por huevos

--- a/config/prod/virtualhosts/films-javier-despliegue.api.chickenkiller.com.conf
+++ b/config/prod/virtualhosts/films-javier-despliegue.api.chickenkiller.com.conf
@@ -1,14 +1,23 @@
 <VirtualHost *:80>
-    ServerAdmin josejavierhernandez.alu@iespacomolla.es
-    ServerName films-javier-despliegue.chickenkiller.com
-    ServerAlias films-javier-despliegue.chickenkiller.com www.films-javier-despliegue.chickenkiller.com films-javier-despliegue.mooo.com
-    DocumentRoot /var/www/html/app/public_html
-   
-    DirectoryIndex pages/home.html
+    ServerName films-javier-despliegue.api.chickenkiller.com
 
-    <Directory /var/www/html/app/public_html>
+    DocumentRoot /var/www/html/app
+
+    # Configuración del servidor
+    <Directory /var/www/html/app>
         Options Indexes FollowSymLinks MultiViews
         AllowOverride All
         Require all granted
     </Directory>
-</VirtualHost>
+
+    RewriteEngine On
+    RewriteCond %{REQUEST_METHOD} OPTIONS
+    RewriteRule ^(.*)$ $1 [R=200,L]
+    
+    Header always add Access-Control-Allow-Origin "*"
+    Header always add Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
+    Header always add Access-Control-Allow-Headers "origin, x-requested-with, content-type, accept, authorization"
+
+    ErrorLog ${APACHE_LOG_DIR}/dev_error.log
+    CustomLog ${APACHE_LOG_DIR}/dev_access.log combined
+</VirtualHost> 
